syntax = "proto3";

/*
   RPCs for moderation settings
*/
package bot.moderation.v1;

import "google/protobuf/wrappers.proto";
import "types/crud/v1/crud.proto";

message ModerationSettings {
  bool enabled = 1;
  google.protobuf.StringValue report_channel_id = 3;
  google.protobuf.Int32Value minage_req = 5;
  google.protobuf.StringValue minage_message = 6;
  bool antihoist_enabled = 7;
}

message GetModerationSettingsRequest {
  string guild_id = 1;
}

message GetModerationSettingsResponse {
  ModerationSettings settings = 1;
}

message UpdateModerationSettingsRequest {
  string guild_id = 1;
  types.crud.v1.RequiredBool enabled = 2;
  types.crud.v1.OptionalString report_channel_id = 4;
  types.crud.v1.OptionalInt32 minage_req = 6;
  types.crud.v1.OptionalString minage_message = 7;
  types.crud.v1.RequiredBool antihoist_enabled = 8;
}

message UpdateModerationSettingsResponse {
  ModerationSettings settings = 1;
}

service ModerationSettingsService {
  rpc GetModerationSettings(GetModerationSettingsRequest) returns (GetModerationSettingsResponse);
  rpc UpdateModerationSettings(UpdateModerationSettingsRequest) returns (UpdateModerationSettingsResponse);
}
